# trovis-modbus-hass

./: README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  enforce-develop.yml  hacs-validation.yml  hassfest.yml
custom_components/trovis557x/: __init__.py  _local_dev.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  date.py  entity.py  field_spec.py  manifest.json  manifest.json.pymodbus  metadata.py  number.py  select.py  sensor.py  strings.json  switch.py  time.py  water_heater.py
custom_components/trovis557x/translations/: de.json  en.json
script/: hasscheck.sh
tests/: conftest.py  test_ha_integration.py  test_stack.py
