[project]
name = "trovis-modbus-hass-tests"
version = "0"
description = "Dev/test environment for the Trovis 557x custom integration."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # Device library required by the TROVIS integration.
    "trovis-modbus>=1.0.2,<2",
    # Backend-neutral connection API and in-memory MockModbusUnit.
    "modbus-connection>=3.3.0,<4",
    # Real Home Assistant plus its custom-component test harness.
    "pytest-homeassistant-custom-component",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]